fix overflow hidden

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -450,7 +450,7 @@ section:last-child {
   height: 100%;
   width: 100%;
   white-space: nowrap;
-  overflow-x: scroll;
+  overflow-x: hidden;
   overflow-y: hidden;
   list-style: none;
   font-size: 0.6em;
